[gd_scene load_steps=5 format=3 uid="uid://c5vj0ca2kjcxq"]

[ext_resource type="Script" path="res://Scripts/Abilities/EarthAbility.gd" id="1_q1rsv"]
[ext_resource type="PackedScene" uid="uid://dphon7n11y75u" path="res://Objects/Abilities/EarthAbilityBlock.tscn" id="2_fqimo"]
[ext_resource type="Texture2D" uid="uid://pc5ikt4wor6t" path="res://Assets/UI/Sprites/abilities/ability_crystal_wall.png" id="3_dde8p"]
[ext_resource type="PackedScene" uid="uid://cxrnp7uj41f0s" path="res://Objects/Utils/BlockCollisionChecker.tscn" id="6_3xiya"]

[node name="EarthAbility" type="Node3D"]
script = ExtResource("1_q1rsv")
punch_strength = 1
stone_block = ExtResource("2_fqimo")
ability_cooldown = 1.0
max_steep = 1.0
ability_icon = ExtResource("3_dde8p")
ability_name = "Crystal Block"

[node name="EarthAbilityCooldown" type="Timer" parent="."]
process_mode = 1
process_callback = 0
wait_time = 3.0
one_shot = true

[node name="CanSpawnBlock" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
target_position = Vector3(0, -2, 0)
collision_mask = 128

[node name="BlockCollisionChecker" parent="." instance=ExtResource("6_3xiya")]
collision_mask = 128

[connection signal="timeout" from="EarthAbilityCooldown" to="." method="_on_earth_attack_cooldown_timeout"]
